# axum-seaorm-teloxide-example

./: .env.example  .gitignore  Cargo.toml  README.md  example.db
api/: Cargo.toml
api/src/: api.rs  cookies.rs  lib.rs
bot/: Cargo.toml
bot/src/: lib.rs
core/: Cargo.toml
core/src/: mutation.rs  query.rs
entity/: Cargo.toml
entity/src/: lib.rs  message.rs  mod.rs  prelude.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
