[package]
name = "axum-seaorm-teloxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "api", "bot", "core", "entity", "migration"]

[dependencies]
tokio = { version = "1.23", features = ["full", "tracing"] }

api = { path = "api" }
bot = { path = "bot"}
