[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.6"
dotenvy = "0.15"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print" ] }
serde = "1.0"
serde_json = "1.0"
tera = "1.17"
tokio = { version = "1.23", features = ["full"] }
tower = "0.4"
tower-cookies = "0.8"
tower-http = { version = "0.3", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

core = { path = "../core" }
entity = { path = "../entity" }
migration = { path = "../migration" }
