[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
teloxide = { version = "0.11", features = ["macros"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.11"

core = { path = "../core" }

