[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.6.1"
dotenvy = "0.15.6"
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print" ] }
serde = "1.0.149"
serde_json = "1.0.89"
tera = "1.17.1"
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"
tower-cookies = "0.8.0"
tower-http = { version = "0.3.5", features = ["fs"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

entity = { path = "../entity" }
migration = { path = "../migration" }
